--- a/memory_game/css/style.css
+++ b/memory_game/css/style.css
@@ -40,6 +40,10 @@ h2 {
 	font-size: 20px;
 }
 
+h1, h2, nav {
+	text-transform: uppercase;
+}
+
 a {
 	font-family: "Raleway", sans-serif;
 	color: #FFFFFF;
